# grpo_aimo2

./: .gitignore  AIME_Dataset_1983_2024.csv  CLAUDE.md  README.md  defaults_download_model.py  defaults_serve_model.py  evaluation_dataset.csv  kernel-metadata.json  modal_execute.py  modal_notebook.py  notebook.py  pyproject.toml  reference.csv  reference_alt.csv  reward_evaluation_dataset.csv  train_config.py  train_execute.py  train_grpo.py  train_grpo_tutorial.py  training_dataset_justcopy.csv  tutorial.py  tutorial_execute.py  tutorial_execute_vllm.py  tutorial_worker.py  tutorial_worker_vllm.py  vllm_serve.py
grpo_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
