[project]
name = "grpo_example"
version = "0.1.0"
description = "GRPO training example"
requires-python = ">=3.8"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "modal>=0.65.66",
    "trl>=0.15.2",
    "vllm>=0.5.5",
    "wandb>=0.19.8",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
