[project]
name = "grpo_example"
version = "0.1.0"
description = "GRPO training example"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "modal>=0.73.116",
    "trl[vllm]==0.16.0",
    "wandb>=0.19.8",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
